# NXTBrowser

./: .gitignore  .travis.yml  Brewfile  LICENSE  Makefile  Makefile.macos  Makefile.switch  Makefile.win32  README.md  meson.build  test.html
.github/: FUNDING.yml
assets/: browser.pdn
include/: console.h  html.h  main.h  sdl_helper.h  tinyxml2.h  validator.h
include/dom/: dom.h
include/gui/: gui.h
include/html/: elements.h  parser.h  properties.h  utils.h  validator.h
include/html/tags/: aside.h  b.h  br.h  genericElement.h  genericTextElement.h  h1.h  h2.h  h3.h  h4.h  h5.h  h6.h  p.h  strong.h
include/input/: input.h
include/libs/: SDL_FontCache.h
include/stack/: stack.h
resources/pages/: test.html
romFS/pages/: test.html
source/: main.cpp  tinyxml2.cpp
source/libs/: SDL_FontCache.c
src/: Makefile  Makefile.linux  Makefile.macos  Makefile.switch  Makefile.win32
src/include/: console.h  main.h  sdl_helper.h
src/include/dom/: dom.h
src/include/gui/: gui.h
src/include/gui/ui/: mainWindow.h
src/include/html/: elements.h  html.h  parser.h  properties.h  utils.h  validator.h
src/include/html/tags/: a.h  b.h  br.h  genericElement.h  genericTextElement.h  h1.h  h2.h  h3.h  h4.h  h5.h  h6.h  li.h  p.h  strong.h
src/include/input/: input.h
src/include/net/: net.h
src/include/stack/: stack.h
src/resources/pages/: test.html
src/source/: console.cpp  main.cpp
src/source/dom/: dom.cpp
src/source/gui/: gui.cpp
src/source/gui/ui/: mainWindow.cpp
src/source/html/: parser.cpp  validator.cpp
src/source/input/: input.cpp
src/source/libs/imgui/: imgui.cpp  imgui_sw.cpp
src/source/libs/tinyxml2/: tinyxml2.cpp
src/source/net/: net.cpp
src/source/stack/: stack.cpp
subprojects/: libui.wrap
